<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/UserActivityLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".ui.neighbour_list.UserInformationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarUserInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ToolbarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/iVUserAvatar" />

    <ImageView
        android:id="@+id/iVUserAvatar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/user_avatar"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tVUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="32dp"
        android:textColor="@color/colorTextWhite"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/iVUserAvatar"
        app:layout_constraintStart_toStartOf="@+id/iVUserAvatar"
        tools:text="User Name" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fabAddToFavourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="275dp"
        android:background="@color/colorBackground"
        android:backgroundTint="@color/colorTextWhite"
        android:clickable="true"
        android:contentDescription="@string/star"
        android:focusable="true"
        android:tint="@color/colorBackground"
        app:backgroundTint="@color/colorTextWhite"
        app:layout_constraintEnd_toEndOf="@+id/cardViewUserInfo"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_star_white_24dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.40" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.70" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewUserInfo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/cvName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:elevation="4dp"
                android:foregroundTint="@color/colorBackground"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="5dp"
                android:textColor="@color/colorTextBlack"
                android:textSize="24sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="First Name" />

            <View
                android:id="@+id/view2"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:background="@color/colorBackground"
                app:layout_constraintBottom_toTopOf="@+id/tvAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cvName" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/tvPhoneNumber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/ivLocation"
                app:layout_constraintTop_toBottomOf="@id/view2"
                tools:text="Address" />

            <TextView
                android:id="@+id/tvPhoneNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toTopOf="@+id/tvEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/tvAddress"
                app:layout_constraintTop_toBottomOf="@+id/tvAddress"
                app:layout_constraintVertical_bias="0.0"
                tools:text="Phone number" />

            <TextView
                android:id="@+id/tvEmailAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/tvPhoneNumber"
                app:layout_constraintTop_toBottomOf="@+id/tvPhoneNumber"
                app:layout_constraintVertical_bias="1.0"
                tools:text="Email address" />

            <ImageView
                android:id="@+id/ivLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/location_icon"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:tint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/tvAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvAddress"
                app:srcCompat="@drawable/ic_location" />

            <ImageView
                android:id="@+id/ivPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/phone_icon"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:tint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/tvPhoneNumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvPhoneNumber"
                app:srcCompat="@drawable/ic_phone" />

            <ImageView
                android:id="@+id/ivEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/globe_icon"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:tint="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/tvEmailAddress"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tvEmailAddress"
                app:srcCompat="@drawable/ic_globe" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewUserDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/cardViewUserInfo"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/cardViewUserInfo"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAProposTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingTop="16dp"
                android:paddingRight="16dp"
                android:paddingBottom="5dp"
                android:text="@string/a_propos_de_moi"
                android:textColor="@color/colorTextBlack"
                android:textSize="24sp"
                android:textStyle="normal" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/colorBackground" />

            <TextView
                android:id="@+id/tvAProposDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:textSize="16sp"
                tools:text="@string/a_propos_de_moi" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>